objects/pse__IHC_Mapping_Concur_to_PSA__mdt.object
<CustomObject>
    <description>Contains records that specify information required for Transformation creation in Integration Hub Connector.</description>
    <fields>
        <fullName>pse__PSA_Field__c</fullName>
        <description>Field of PSA Object for which transformation needs to be created in Integration Hub Connector.</description>
        <inlineHelpText>Field of PSA Object for which transformation needs to be created in Integration Hub Connector.</inlineHelpText>
        <label>PSA Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__PSA_Object__c</fullName>
        <description>PSA Object for which transformation needs to be created in Integration Hub Connector.</description>
        <inlineHelpText>PSA Object for which transformation needs to be created in Integration Hub Connector.</inlineHelpText>
        <label>PSA Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Third_Party_Application_Field__c</fullName>
        <description>Field of Third Party Application Object for which transformation needs to be created in Integration Hub Connector.</description>
        <inlineHelpText>Field of Third Party Application Object for which transformation needs to be created in Integration Hub Connector.</inlineHelpText>
        <label>Third Party Application Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Third_Party_Application_Object__c</fullName>
        <description>Third Party Application Object for which transformation needs to be created in Integration Hub Connector.</description>
        <inlineHelpText>Third Party Application Object for which transformation needs to be created in Integration Hub Connector.</inlineHelpText>
        <label>Third Party Application Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Third_Party_Application__c</fullName>
        <description>Third Party Application for which transformation needs to be created in Integration Hub Connector.</description>
        <inlineHelpText>Third Party Application for which transformation needs to be created in Integration Hub Connector.</inlineHelpText>
        <label>Third Party Application</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Concur</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__VDR_Key__c</fullName>
        <description>Key in Virtual Data Resource on Integration Hub Connector.</description>
        <inlineHelpText>Key in Virtual Data Resource in Integration Hub Connector.</inlineHelpText>
        <label>VDR Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__VDR_Name__c</fullName>
        <description>The Name of Virtual Data Resource in Integration Hub Connector.</description>
        <inlineHelpText>The Name of Virtual Data Resource in Integration Hub Connector.</inlineHelpText>
        <label>VDR Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>IHC Mapping Concur to PSA</label>
    <pluralLabel>IHC Mappings Concur to PSA</pluralLabel>
</CustomObject>